# assets

./: .checkpatch.conf  .editorconfig  .gitattributes  .gitignore  .gitmodules  .gitreview  BUILD-RIM-MEASURER  CMakeLists.txt  Cargo.toml  Makefile  README.md  branch_protection.mk  build-rim-measurer.sh  build.config.gki  build.config.gki.aarch64.realm  build.config.gki.realm  build.sh  build_vm.sh  builtin-help.c  builtin-run.c  builtin-setup.c  builtin-version.c  clean.sh  cloak.c  common.mk  contributing.rst  defaults.mk  disk.img  fvp-android.mk  fvp.mk  guest_compat.c  image.ld  image.ld.S  kvm-cmd.c  kvm-cpu.c  kvm.c  license.rst  maintainers.rst  mmio.c  qemu.mk  (+3 more)
.cargo/: config
arch/arm64/: Kconfig
arm/: Makefile.arm64  Makefile.common  cstart.S  cstart64.S  fdt.c  gic.c  kvm-cpu.c  kvm.c  realm-attest.c  realm-fpu.c  realm-ns-memory.c  realm-rsi.c  realm-sea.c  run-realm-tests  selftest.c  unittests.cfg
arm/aarch32/: kvm.c
arm/aarch64/: arm-cpu.c  channel.c  kvm-cpu.c  kvm.c  measurement.c  pmu.c  pvtime.c  realm.c  rim-measure.c  socket.c
cmake/: CMake.DeveloperReference.HTML.qs  CMake.Documentation.SphinxHTML.qs  CMake.qs  CMakeCPackOptions.cmake  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestCustom.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake
cmake/Auxiliary/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/Bootstrap.cmk/: InitialCacheFlags.cmake  cmConfigure.h  cmVersionConfig.h
cmake/Source/: CMakeVersion.cmake  CTestTestfile.cmake  Makefile  cmConfigure.h  cmVersionConfig.h  cmake_install.cmake
cmake/Tests/: CMakeBuildDoubleProjectTest.cmake  CMakeBuildTest.cmake  (+5 more)
common-modules/virtual-device/: BUILD.bazel  Kbuild  Makefile  aarch64.fragment  arm.fragment  build.config.server.aarch64  build.config.server.x86_64  build.config.virtual_device  build.config.virtual_device.aarch64  build.config.virtual_device.aarch64.16k  build.config.virtual_device.arm  build.config.virtual_device.i686  build.config.virtual_device.riscv64  build.config.virtual_device.x86_64  build.config.virtual_device_kasan.aarch64  build.config.virtual_device_kasan.x86_64  build.config.virtual_device_kgdb.aarch64  build.config.virtual_device_kgdb.x86_64  build.config.virtual_device_kprobes.aarch64  build.config.virtual_device_kprobes.x86_64  i686.fragment  kgdb.fragment  linux_distro.fragment  virtual_device.fragment  virtual_device_core.fragment
common-modules/virtual-device/goldfish_drivers/: Kbuild  defconfig_test.h  goldfish_address_space.c  goldfish_battery.c  goldfish_pipe.h  goldfish_pipe_base.c  goldfish_pipe_v1.c  goldfish_pipe_v2.c  goldfish_sync.c
common-modules/virtual-device/rtl8821cu/: Makefile
common-modules/virtual-device/rtl8821cu/core/: rtw_mlme_ext.c
common-modules/virtual-device/rtl8821cu/hal/hal_hci/: hal_usb.c
common-modules/virtual-device/rtl8821cu/hal/phydm/: phydm.mk
common-modules/virtual-device/rtl8821cu/hal/rtl8821c/usb/: rtl8821cu_xmit.c
common-modules/virtual-device/rtl8821cu/include/: osdep_service.h  xmit_osdep.h
common-modules/virtual-device/rtl8821cu/os_dep/: osdep_service.c
common-modules/virtual-device/rtl8821cu/os_dep/linux/: usb_ops_linux.c  xmit_linux.c
common-modules/virtual-device/uapi/drm/: virtgpu_drm.h
common-modules/virtual-device/uapi/goldfish/: goldfish_address_space.h  goldfish_dma.h  goldfish_sync.h
common-modules/virtual-device/uapi/linux/: virtio_gpu.h
common-modules/virtual-device/virtio_gpu/: Kbuild  virtgpu_drv.c  virtgpu_drv.h  virtgpu_ioctl.c  virtgpu_kms.c  virtgpu_object.c  virtgpu_plane.c  virtgpu_vq.c
common-modules/virtual-device/virtio_snd/: Kbuild
common-modules/virtual-device/wlan_simulation/: Kbuild
disk/: core.c
docs/: Makefile  change-log.rst  conf.py  design.rst  implementing-tests.rst  index.rst  license.rst  porting-guide.rst  user-guide.rst
drivers/: Kconfig  Makefile
dtc/: .gitignore
el3_payload/: .gitignore  Makefile  README  arch.h  asm_macros.S  el3_payload.ld.S  entrypoint.S  spin.S  uart.S
formatter/: shfmt
fs/: open.c  read_write.c  sync.c
guest-linux/: 0001-rsi-request-rmm-to-reshare-memory-in-pas.patch  realmvm_defconfig
hw/: cfi_flash.c  serial.c
inc/: gateway.h  pal_config_def.h  pal_interfaces.h  val.h  val_framework.h  val_realm_rsi.h  val_rmm.h
include/: common-cmds.h
ipc/: msg.c
islet/: 00-fvp.diff  01-64_bit_only.diff  02-2023-07-31.diff  02-watchdog-net-fix.diff  03-disable-HOME-intent.diff  03-temp-fvp-workaround.diff  04-2023-08-22-kanglib.diff  04-demo-protected-vm.diff  05-disable-daemons.diff  1.fvp.diff  2.temp-fvp-workaround.diff  README.build.txt  README.run.txt  fvp.diff  setup_aosp.sh
kconfigs/: vsock.conf
lib/: alloc_page.c  alloc_page.h  libcflat.h
make_helpers/: build_macros.mk  defaults.mk
mips/: kvm-cpu.c  kvm.c
openssl/: README
powerpc/: kvm-cpu.c  kvm.c
prebuilt/: FVP_AARCH64_EFI.fd  bootaa64.efi  srec_cat  tftf.elf
realm/: platform.h  realm.ld.S  realm.mk  realm_debug.c  realm_interrupt.c  realm_payload_main.c  realm_rsi.c  realm_rsi.h  realm_shared_data.c
riscv/: kvm-cpu.c  kvm.c
samples/: Kconfig  Makefile
scripts/: run_fwu_fvp.sh
security/: lsm_audit.c
spm/: README.txt
src/: aes.rs  allocator.rs  asm_macros.S  cache_helpers.S  def.rs  enable_mmu.S  entry.rs  main.rs  memcpy.S  memcpy.ss  module.rs  module_cvm_hardening.rs  module_fl.rs  pal_irq.c  pal_libc.c  pal_spinlock.S  pal_syscall.S  rsi.rs  smc.S  symbols.S  val_framework.c  val_realm_boot_entry.S  val_realm_exception.c  val_realm_framework.c  val_realm_memory.c  val_realm_rsi.c  virtio.rs  vtable.S
trusted-firmware-a/: 0001-add-0x8_8000_0000-dram-for-nw.patch  0002-temporal-context-do-not-save-restore-some-sysregs.patch
util/: read-write.c  sha2.c  update_headers.sh
verification-annotations/: Cargo.toml
virtio/: 9p-vm.c  9p.c  balloon.c  blk-vm.c  blk.c  console.c  core.c  mmio-legacy.c  mmio-modern.c  mmio.c  net-vm.c  net.c  pci-legacy.c  pci-modern.c  pci.c  rng.c  scsi.c  vm-main.c  vsock.c
x86/: kvm-cpu.c  kvm.c
(+7804 files in other folders)
