[package]
name = "gateway"
version = "0.0.1"
authors = ["Islet Contributors"]
edition = "2021"

[[bin]]
name = "gateway"
path = "src/main.rs"

[features]

[dependencies]
linked_list_allocator = "0.10.4"
aes-gcm = { default-features = false, features = ["aes", "alloc"] }
aes = "0.8.4"

[build-dependencies]
